--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1> Performance Analytics Web App </h1>
-    <div><button onclick="window.location.href = '/login'"> >Login</button>
-        <button onclick="window.location.href = '/signup'"> >Sign Up</button>
+    <div><button onclick="window.location.href = '/login'"> Login</button>
+        <button onclick="window.location.href = '/signup'"> Sign Up</button>
     </div>
 </body>
 </html>
