--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,7 +6,7 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <h1>Welcome back!, <%= locals.teacherDetail.email%></h1>
+    <h1>Welcome back! <%= locals.teacherDetail.email%></h1>
     
 </body>
 </html>
