--- a/views/addStudent.ejs
+++ b/views/addStudent.ejs
@@ -9,7 +9,8 @@
     <form id="addStudent" action="/addStudent" enctype="application/x-www-form-urlencoded" method="post">
         <h2>Add Student</h2><br>
 
-        
+        <label for="school">Student Name:</label>
+        <input type="text" id="school" name="name"><br><br>
             <label for="school">School:</label>
             <input type="text" id="school" name="school"><br><br>
           
